# SensorApp

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: ci.yml  release.yml
config/: sensor1.json  sensor2.json  simulation_datasource_config.json  transport.local.json  transport.local2.json
include/: ConfigLoader.hpp  ConfigTypes.hpp  DataSource.hpp  HardwareCamera.hpp  HardwareDataSource.hpp  ICamera.hpp  IDataSource.hpp  ITransport.hpp  Logger.hpp  MockCamera.hpp  NetworkConstants.hpp  OpenCvCamera.hpp  Sensor.hpp  SimulationDataSource.hpp  StringUtils.hpp  TcpSocket.hpp  TcpTransport.hpp  TransportFactory.hpp  UdpSocket.hpp  UdpTransport.hpp
scripts/: analyze.sh  build.sh  coverage.sh  format.sh
src/: CMakeLists.txt  ConfigLoader.cpp  HardwareDataSource.cpp  MockCamera.cpp  Sensor.cpp  SimulationDataSource.cpp  TcpSocket.cpp  TransportFactory.cpp  UdpSocket.cpp  main.cpp
tests/: CMakeLists.txt  ForceLink.cpp  test_ConfigLoader.cpp  test_HardwareDataSource.cpp  test_Sensor.cpp  test_TcpSocket.cpp  test_TransportFactory.cpp  test_UdpSocket.cpp
